--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "globby": "^11.0.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
+    "postcss-100vh-fix": "^0.1.1",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
