--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,6 +76,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: "`linkcheck` deployment"
         run: |
-          curl -s https://api.github.com/repos/filiph/linkcheck/releases/latest | jq '.assets[] | select(.name|test("linux")) | .browser_download_url' | xargs curl -sL -o linkcheck
+          curl -s https://api.github.com/repos/filiph/linkcheck/releases/latest | jq '.assets[] | select(.name|test("linux-x64")) | .browser_download_url' | xargs curl -sL -o linkcheck
           chmod +x linkcheck
           ./linkcheck --external https://faux.digital --skip-file .github/workflows/linkcheck-skipfile.txt
