--- a/package.json
+++ b/package.json
@@ -93,5 +93,8 @@
     "schema-dts": "^0.7.4",
     "tailwindcss": "^1.9.6",
     "typescript": "^4.5.5"
+  },
+  "volta": {
+    "node": "12.8.1"
   }
 }
